module(
    name = "robhor-advent_of_code",
    version = "1.0.0",
)

bazel_dep(name = "abseil-cpp", version = "20230802.0")
bazel_dep(name = "googletest", version = "1.14.0")
# https://github.com/bazelbuild/rules_python/releases
bazel_dep(name = "rules_python", version = "0.27.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pypi")